Fixed navbar wraparound
css.css
-added @media

index_files\css.css
-changed padding: 14px 16px; to 0.5em 0.5em.

--- a/grids/index_files/styles.css
+++ b/grids/index_files/styles.css
@@ -231,7 +231,7 @@ li a {
   display: block;
   color: black;
   text-align: center;
-  padding: 14px 16px;
+  padding: 0.5em 0.5em;
   margin-left: 2px;
   text-decoration: none;
 }
